Fixed threading issue with animated transform masks with non-centered rotations.

BUG:438340